# pauli_algebra

./: README.md  pyproject.toml
src/pauli_algebra/: algebra.py  matrices.py  utils.py
test/: test_algebra.py  test_matrices.py  test_utils.py
